# whatsapp-babalar

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  deploy.config.example  deploy.sh  docker-compose.prod.yml  docker-compose.yml  run.sh
babalar-backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
babalar-backend/alembic/: env.py
babalar-backend/alembic/versions/: 001_initial.py  002_add_roles.py
babalar-backend/app/: auth.py  cli.py  config.py  database.py  main.py
babalar-backend/app/api/: admin.py  auth.py  chat.py  ingest.py
babalar-backend/app/models/: __init__.py  models.py
babalar-backend/app/services/: categorizer.py  embedding.py  log_buffer.py  rag.py  rate_limiter.py
babalar-frontend/: Dockerfile  index.html  package-lock.json  package.json
babalar-frontend/src/: App.tsx  main.tsx
babalar-frontend/src/api/: client.ts
babalar-frontend/src/pages/: AdminPage.tsx  ChatPage.tsx  LoginPage.tsx  RegisterPage.tsx
babalar-frontend/src/store/: auth.ts  theme.ts
babalar-ingestion/: Dockerfile  package.json
babalar-ingestion/src/: api-client.js  index.js  scheduler.js  whatsapp.js
docs/: ARCHITECTURE.md  aws-deploy.md
infrastructure/: app.py  app_frontend.py  cdk.json  requirements.txt
infrastructure/stacks/: compute_stack.py  database_stack.py  frontend_stack.py  network_stack.py
